# shaderpixel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
cmake/: LinkASSIMP.cmake  LinkGLAD.cmake  LinkGLM.cmake  LinkIMGUI.cmake  LinkSDL2.cmake  LinkSTB.cmake
include/: Camera.h  Clock.h  ErrorHandler.h  EventHandler.h  Gui.h  Mesh.h  Model.h  Owner.h  Renderer.h  SdlHandler.h  Shader.h  Window.h  main.h  oldShader.h  types.h
include/Controller/: Controller.h
include/Model/: Model.h
include/View/: View.h
resources/: diffuse_shader.frag  diffuse_shader.vert  diffuse_single_color_shader.frag  shader.frag  shader.vert  single_color_shader.frag  single_color_shader.vert  standard_shader.frag  standard_shader.vert  terrain_shader.frag
resources/Pillar/: LP_Pillar_Textured.mtl
resources/cube/: cube.mtl
resources/pedestal/: 10421_square_pedastal_iterations-2.mtl
resources/terrain/: terrain.mtl
src/: Camera.cpp  Clock.cpp  ErrorHandler.cpp  EventHandler.cpp  Gui.cpp  Mesh.cpp  Model.cpp  Owner.cpp  Renderer.cpp  SdlHandler.cpp  Shader.cpp  Window.cpp  main.cpp  oldShader.cpp
src/Controller/: Controller.cpp
src/Model/: Model.cpp
src/View/: View.cpp
